fix presenter icon on user avatar on safari 12.1 Mojave

--- a/bigbluebutton-html5/imports/ui/components/user-avatar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-avatar/styles.scss
@@ -10,6 +10,7 @@
   --user-avatar-text: var(--color-white);
   --user-indicator-voice-bg: var(--color-success);
   --user-indicator-muted-bg: var(--color-danger);
+  --user-indicator-size:	0.875rem;
   --user-list-bg: var(--color-off-white);
   --user-color: currentColor; //picks the current color reference in the class
 }
@@ -30,12 +31,9 @@
   &:before {
     content: "";
     position: absolute;
-    width: 0;
-    height: 0;
-    padding-top: .5rem;
-    padding-right: 0;
-    padding-left: 0;
-    padding-bottom: 0;
+    width: var(--user-indicator-size);
+    height: var(--user-indicator-size);
+    padding-top: .5rem 0 0 0;
     color: inherit;
     top: auto;
     left: auto;
